Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • ModemManager ModemManager
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 253
    • Issues 253
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 20
    • Merge requests 20
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • Mobile broadband connectivityMobile broadband connectivity
  • ModemManagerModemManager
  • Issues
  • #398
Closed
Open
Issue created Jul 08, 2021 by SP39 Chorzow@sp39chorzow

Not possible to establish Internet connection with Nokia phones

Starting from version: modemmanager-1.14.10 (and also all 1.16 versions are affected) I see this error: couldn't enable interface: 'Requested power transition is not supported by this modem' and cannot establish connection.

More info:

lip 08 19:32:33 manjaro-xfce ModemManager[422]: <info>  [device /sys/devices/pci0000:00/0000:00:11.0/0000:02:03.0/usb1/1-1] creating modem with plugin 'nokia' and '2' ports
lip 08 19:32:33 manjaro-xfce ModemManager[422]: <warn>  [plugin/nokia] could not grab port usbpn0: unsupported subsystem: 'net'
lip 08 19:32:33 manjaro-xfce ModemManager[422]: <info>  [base-manager] modem for device '/sys/devices/pci0000:00/0000:00:11.0/0000:02:03.0/usb1/1-1' successfully created
lip 08 19:32:33 manjaro-xfce ModemManager[422]: <warn>  [modem0/sim0] couldn't load list of emergency numbers: Unknown error
lip 08 19:32:33 manjaro-xfce ModemManager[422]: <warn>  [modem0] couldn't load list of own numbers: Not found
lip 08 19:32:34 manjaro-xfce ModemManager[422]: <warn>  [modem0] couldn't load UE mode of operation for EPS: Unknown error
lip 08 19:32:34 manjaro-xfce ModemManager[422]: <info>  [modem0] state changed (unknown -> disabled)
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.1500] modem["ttyACM0"]: modem state changed, 'disabled' --> 'enabling' (reason: user preference)
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.1523] manager: (ttyACM0): new Broadband device (/org/freedesktop/NetworkManager/Devices/4)
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.1555] device (ttyACM0): state change: unmanaged -> unavailable (reason 'managed', sys-iface-state: 'external')
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.1579] device (ttyACM0): modem state 'enabling'
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.1637] device (ttyACM0): state change: unavailable -> disconnected (reason 'none', sys-iface-state: 'managed')
lip 08 19:32:34 manjaro-xfce ModemManager[422]: <info>  [modem0] state changed (disabled -> enabling)
lip 08 19:32:34 manjaro-xfce ModemManager[422]: <warn>  [modem0] couldn't enable interface: 'Requested power transition is not supported by this modem'
lip 08 19:32:34 manjaro-xfce ModemManager[422]: <info>  [modem0] state changed (enabling -> disabled)
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <warn>  [1625765554.4739] modem-broadband[ttyACM0]: failed to enable modem: GDBus.Error:org.freedesktop.ModemManager1.Error.Core.Unsupported: Requested power transition is not supported by this modem
lip 08 19:32:34 manjaro-xfce NetworkManager[385]: <info>  [1625765554.4772] modem["ttyACM0"]: modem state changed, 'enabling' --> 'disabled' (reason: unknown)

Downgrading package (for example to version 1.14.8) solves connection issue:

lip 08 19:44:54 manjaro-xfce NetworkManager[1897]: <info>  [1625766294.9670] modem["ttyACM0"]: modem state changed, 'disabled' --> 'enabling' (reason: user preference)
lip 08 19:44:54 manjaro-xfce NetworkManager[1897]: <info>  [1625766294.9717] manager: (ttyACM0): new Broadband device (/org/freedesktop/NetworkManager/Devices/4)
lip 08 19:44:54 manjaro-xfce NetworkManager[1897]: <info>  [1625766294.9737] device (ttyACM0): state change: unmanaged -> unavailable (reason 'managed', sys-iface-state: 'external')
lip 08 19:44:54 manjaro-xfce NetworkManager[1897]: <info>  [1625766294.9761] device (ttyACM0): modem state 'enabling'
lip 08 19:44:54 manjaro-xfce NetworkManager[1897]: <info>  [1625766294.9797] device (ttyACM0): state change: unavailable -> disconnected (reason 'none', sys-iface-state: 'managed')
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <info>  [modem0] state changed (disabled -> enabling)
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <warn>  [modem0] failed to check if SIM was swapped: sim identifier could not be loaded
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <info>  [modem0] state changed (enabling -> enabled)
lip 08 19:44:55 manjaro-xfce NetworkManager[1897]: <info>  [1625766295.4007] modem["ttyACM0"]: modem state changed, 'enabling' --> 'enabled' (reason: user-requested)
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <info>  [modem0] 3GPP Registration state changed (unknown -> registering)
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <info>  [modem0] 3GPP Registration state changed (registering -> home)
lip 08 19:44:55 manjaro-xfce ModemManager[1906]: <info>  [modem0] state changed (enabled -> registered)
lip 08 19:44:55 manjaro-xfce NetworkManager[1897]: <info>  [1625766295.5320] modem["ttyACM0"]: modem state changed, 'enabled' --> 'registered' (reason: unknown)
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9120] device (ttyACM0): Activation: starting connection 'Orange HSPA' (fe707634-9215-4d87-90d5-dc12bd093466)
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9123] audit: op="connection-activate" uuid="fe707634-9215-4d87-90d5-dc12bd093466" name="Orange Standard access" pid=982 uid=1000 result="success"
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9124] device (ttyACM0): state change: disconnected -> prepare (reason 'none', sys-iface-state: 'managed')
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9128] device (ttyACM0): state change: prepare -> need-auth (reason 'none', sys-iface-state: 'managed')
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9139] device (ttyACM0): state change: need-auth -> prepare (reason 'none', sys-iface-state: 'managed')
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect started...
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect state (4/8): wait to get fully enabled
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect state (5/8): register
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect state (6/8): bearer
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect state (7/8): connect
lip 08 19:45:05 manjaro-xfce ModemManager[1906]: <info>  [modem0] state changed (registered -> connecting)
lip 08 19:45:05 manjaro-xfce NetworkManager[1897]: <info>  [1625766305.9249] modem["ttyACM0"]: modem state changed, 'registered' --> 'connecting' (reason: user-requested)
lip 08 19:45:07 manjaro-xfce ModemManager[1906]: <info>  [modem0] state changed (connecting -> connected)
lip 08 19:45:07 manjaro-xfce ModemManager[1906]: <info>  [modem0] simple connect state (8/8): all done
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5338] modem["ttyACM0"]: modem state changed, 'connecting' --> 'connected' (reason: user-requested)
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5403] device (ttyACM0): state change: prepare -> config (reason 'none', sys-iface-state: 'managed')
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5421] device (ttyACM0): state change: config -> ip-config (reason 'none', sys-iface-state: 'managed')
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5431] modem["ttyACM0"]: using modem-specified IP timeout: 20 seconds
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5594] loaded PPP plugin /usr/lib/NetworkManager/1.30.4-3/libnm-ppp-plugin.so
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5602] ppp-manager: starting PPP connection
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5701] ppp-manager: pppd started with pid 2102
lip 08 19:45:07 manjaro-xfce NetworkManager[1897]: <info>  [1625766307.5709] modem["ttyACM0"]: IPv6 configuration disabled

I know that Nokia (Symbian) phones are old, but still usable. It is possible that in the future versions of MM still will be supported correctly?

Regards, Robert

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking